# ai_agent_poc

./: .env.example  .gitignore  README.md  project_prd.md  pyproject.toml
data/chroma/: chroma.sqlite3
data/structured/: booking_templates.json  freight_rates.json  port_info.json  tracking_events.json  vessel_schedules.json
data/tribal/: booking_tips.md  carrier_preferences.md  common_issues.md
data/unstructured/: carrier_notices.md  port_congestion_reports.md  trade_regulations.md
docs/: PRD.md
src/: __init__.py  config.py
src/agents/: __init__.py  booking_agent.py  orchestrator.py  tracking_agent.py
src/cli/: __init__.py  app.py  logger.py  renderer.py
src/decision/: __init__.py  models.py  trace.py
src/knowledge/: __init__.py  loader.py  rag.py  store.py
src/mock_api/: __init__.py  carrier_api.py  terminal_api.py  tracking_api.py
src/tools/: __init__.py  booking_tools.py  knowledge_tools.py  tracking_tools.py
tests/: eval_framework.py  test_booking_agent.py  test_knowledge_store.py  test_tracking_agent.py
tests/scenarios/: booking_scenarios.json  tracking_scenarios.json
